fleet/ingress/spfbl-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spfbl-admin
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-spfbl
spec:
  rules:
    - host: spfbl-admin.kmee.dev.br
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-spfbl
              servicePort: 8000
  tls:
    - hosts:
        - spfbl-admin.kmee.dev.br
      secretName: letsencrypt-spfbl
status:
  loadBalancer:
    ingress:
    - ip: 10.10.6.11
    - ip: 10.10.6.12
    - ip: 10.10.6.13
